syntax = "proto3";
package proto;
option go_package = "./v1;pb";
import "google/api/annotations.proto";

message  TestRequest{
  string  name = 1;
}
message  TestResponse{
    string  status =1;
}


service  Test{
  rpc TestService(TestRequest) returns (TestResponse) {
    option (google.api.http) = {
      get: "/v1/test"
    };
  };
}